scala_l brary(
    s ces = [
        "*.scala",
        "common/*.scala",
    ],
    comp ler_opt on_sets = ["fatal_warn ngs"],
    platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-only",
    ],
    dependenc es = [
        "src/scala/com/tw ter/s mclusters_v2/common/cluster ng",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces:aggregatable_producer_s mclusters_embedd ngs_by_log_fav_score-scala",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces:clusters_ mbers_connected_components_ape_s m lar y-scala",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces:clusters_ mbers_largest_d m_ape_s m lar y-scala",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces:clusters_ mbers_largest_d m_ape_s m lar y_2_day_update-scala",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces:clusters_ mbers_louva n_ape_s m lar y-scala",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces: nterested_ n_tw ce_by_largest_d m-scala",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces: nterested_ n_tw ce_by_largest_d m_2_day_update-scala",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces: nterested_ n_tw ce_by_largest_d m_fav_score-scala",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces: nterested_ n_tw ce_connected_components-scala",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces: nterested_ n_tw ce_louva n-scala",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces:user_user_normal zed_graph-scala",
        "src/scala/com/tw ter/s mclusters_v2/scald ng/common",
        "src/scala/com/tw ter/s mclusters_v2/scald ng/embedd ng",
        "src/scala/com/tw ter/wtf/scald ng/jobs/common:execut on_app",
        "src/scala/com/tw ter/wtf/scald ng/jobs/common:s ces",
        "src/scala/com/tw ter/wtf/scald ng/jobs/common:stats_ut l",
    ],
)

# ========================
# ADHOC JOB CONF GURAT ONS
# Note: Please change mapreduce.job.reduces and --num-reducers toget r.
# ========================
scald ng_job(
    na  = " nterested_ n_tw ce_largest_d m-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.embedd ng.tw ce. nterested nTw ceLargestD mAdhocApp",
    args = [
        "--date 2021-08-31",
        "--num-reducers 4000",
    ],
    conf g = [
        ("hadoop.comb ne- nput", "true"),
        ("hadoop.map.jvm.total- mory", "3072m"),
        ("hadoop.reduce.jvm.total- mory", "3072m"),
        ("hadoop.subm ter.jvm.total- mory", "5120m"),
        ("subm ter.t er", "preempt ble"),
    ],
    hadoop_cluster = "qus1-blueb rd",
    hadoop_propert es = [
        ("mapreduce.job.reduce.slowstart.completedmaps", "1.0"),
        ("scald ng.w h.reducers.set.expl c ly", "true"),
        ("mapreduce.job.reduces", "4000"),
        ("mapreduce.task.t  out", "0"),
    ],
    platform = "java8",
    role = "cassowary",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":tw ce"],
)

scald ng_job(
    na  = " nterested_ n_tw ce_largest_d m_fav_score-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.embedd ng.tw ce. nterested nTw ceLargestD mMaxFavScoreAdhocApp",
    args = [
        "--date 2022-07-01",
        "--num-reducers 4000",
    ],
    conf g = [
        ("hadoop.comb ne- nput", "true"),
        ("hadoop.map.jvm.total- mory", "3072m"),
        ("hadoop.reduce.jvm.total- mory", "3072m"),
        ("hadoop.subm ter.jvm.total- mory", "5120m"),
        ("subm ter.t er", "preempt ble"),
    ],
    hadoop_cluster = "qus1-blueb rd",
    hadoop_propert es = [
        ("mapreduce.job.reduce.slowstart.completedmaps", "1.0"),
        ("scald ng.w h.reducers.set.expl c ly", "true"),
        ("mapreduce.job.reduces", "4000"),
        ("mapreduce.task.t  out", "0"),
    ],
    platform = "java8",
    role = "cassowary",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":tw ce"],
)

scald ng_job(
    na  = " nterested_ n_tw ce_louva n-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.embedd ng.tw ce. nterested nTw ceLouva nAdhocApp",
    args = [
        "--date 2021-08-31",
        "--num-reducers 4000",
        "--cos ne_s m lar y_threshold 0.5",
    ],
    conf g = [
        ("hadoop.comb ne- nput", "true"),
        ("hadoop.map.jvm.total- mory", "3072m"),
        ("hadoop.reduce.jvm.total- mory", "3072m"),
        ("hadoop.subm ter.jvm.total- mory", "5120m"),
        ("subm ter.t er", "preempt ble"),
    ],
    hadoop_cluster = "qus1-blueb rd",
    hadoop_propert es = [
        ("mapreduce.job.reduce.slowstart.completedmaps", "1.0"),
        ("scald ng.w h.reducers.set.expl c ly", "true"),
        ("mapreduce.job.reduces", "4000"),
        ("mapreduce.task.t  out", "0"),
    ],
    platform = "java8",
    role = "cassowary",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":tw ce"],
)

scald ng_job(
    na  = " nterested_ n_tw ce_connected_components-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.embedd ng.tw ce. nterested nTw ceConnectedComponentsAdhocApp",
    args = [
        "--date 2021-08-31",
        "--num-reducers 4000",
        "--cos ne_s m lar y_threshold 0.5",
    ],
    conf g = [
        ("hadoop.comb ne- nput", "true"),
        ("hadoop.map.jvm.total- mory", "3072m"),
        ("hadoop.reduce.jvm.total- mory", "3072m"),
        ("hadoop.subm ter.jvm.total- mory", "5120m"),
        ("subm ter.t er", "preempt ble"),
    ],
    hadoop_cluster = "qus1-blueb rd",
    hadoop_propert es = [
        ("mapreduce.job.reduce.slowstart.completedmaps", "1.0"),
        ("scald ng.w h.reducers.set.expl c ly", "true"),
        ("mapreduce.job.reduces", "4000"),
        ("mapreduce.task.t  out", "0"),
    ],
    platform = "java8",
    role = "cassowary",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [":tw ce"],
)

# ============================
# SCHEDULED JOB CONF GURAT ONS
# Tw ce jobs have been desc duled
# ============================
