scala_l brary(
    platform = "java8",
    tags = ["bazel-only"],
    dependenc es = [
        "3rdparty/jvm/com/tw ter/storehaus:algebra",
        "3rdparty/jvm/com/tw ter/storehaus:core",
        "3rdparty/src/jvm/com/tw ter/storehaus:algebra",
        "3rdparty/src/jvm/com/tw ter/storehaus:core",
        "graphstore/common:flock_follows-java",
        "snowflake: d",
        "src/java/com/tw ter/ml/ap /constant",
        "src/java/com/tw ter/sbf/graph",
        "src/scala/com/tw ter/ml/ap :ap -base",
        "src/scala/com/tw ter/pluck/s ce/core_workflows/user_model:condensed_user_state-scala",
        "src/scala/com/tw ter/scald ng_ nternal/dalv2",
        "src/scala/com/tw ter/scald ng_ nternal/job",
        "src/scala/com/tw ter/scald ng_ nternal/job/analyt cs_batch",
        "src/scala/com/tw ter/scald ng_ nternal/s ce",
        "src/scala/com/tw ter/scald ng_ nternal/s ce/lzo_scrooge",
        "src/scala/com/tw ter/s mclusters_v2/cand date_s ce",
        "src/scala/com/tw ter/s mclusters_v2/hdfs_s ces",
        "src/scala/com/tw ter/s mclusters_v2/scald ng",
        "src/scala/com/tw ter/s mclusters_v2/scald ng/common",
        "src/scala/com/tw ter/s mclusters_v2/scald ng/offl ne_job",
        "src/scala/com/tw ter/s mclusters_v2/summ ngb rd/common",
        "src/scala/com/tw ter/t  l nes/pred ct on/features/common",
        "src/scala/com/tw ter/t  l nes/pred ct on/features/ l",
        "src/scala/com/tw ter/t  l nes/pred ct on/features/recap",
        "src/scala/com/tw ter/wtf/scald ng/jobs/common:execut on_app",
        "src/thr ft/com/tw ter/ rm /cand date: rm -cand date-scala",
        "src/thr ft/com/tw ter/wtf/scald ng/s ms:s ms-thr ft-scala",
        "twadoop_conf g/conf gurat on/log_categor es/group/t  l ne:t  l ne_serv ce_favor es-scala",
        "users ce/snapshot/src/ma n/scala/com/tw ter/users ce/snapshot/flat:users ce_flat-scala",
        "users ce/snapshot/src/ma n/thr ft/com/tw ter/users ce/snapshot/flat:flat-scala",
    ],
)

hadoop_b nary(
    na  = "t et_embedd ng-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.offl ne_job.S mClustersT etEmbedd ngAdhocApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":adhoc",
    ],
)

hadoop_b nary(
    na  = "t et_embedd ng_evaluat on_samples-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.offl ne_job.T etS m lar yEvaluat onSampl ngAdhocApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":adhoc",
    ],
)

hadoop_b nary(
    na  = "t et_embedd ng_evaluat on-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.offl ne_job.T etS m lar yEvaluat onAdhocApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":adhoc",
    ],
)
