scala_l brary(
    platform = "java8",
    tags = ["bazel-only"],
    dependenc es = [
        "3rdparty/jvm/com/tw ter/storehaus:algebra",
        "3rdparty/jvm/com/tw ter/storehaus:core",
        "snowflake: d",
        "src/java/com/tw ter/ml/ap /constant",
        "src/scala/com/tw ter/ml/ap :ap -base",
        "src/scala/com/tw ter/rux/land ng_page/data_p pel ne:labeled_rux_serv ce_scr be-scala",
        "src/scala/com/tw ter/rux/land ng_page/data_p pel ne:land ng_page_labeled_data_record-java",
        "src/scala/com/tw ter/scald ng_ nternal/dalv2",
        "src/scala/com/tw ter/scald ng_ nternal/dalv2/dataset",
        "src/scala/com/tw ter/scald ng_ nternal/job",
        "src/scala/com/tw ter/scald ng_ nternal/job/analyt cs_batch",
        "src/scala/com/tw ter/scald ng_ nternal/s ce",
        "src/scala/com/tw ter/scald ng_ nternal/s ce/lzo_scrooge",
        "src/scala/com/tw ter/s mclusters_v2/common",
        "src/scala/com/tw ter/s mclusters_v2/scald ng",
        "src/scala/com/tw ter/s mclusters_v2/scald ng/common",
        "src/scala/com/tw ter/s mclusters_v2/summ ngb rd/common",
        "src/scala/com/tw ter/wtf/scald ng/jobs/common:ddg_ut l",
        "twml/runt  /src/ma n/scala/com/tw ter/twml/runt  /scald ng",
    ],
)

hadoop_b nary(
    na  = "rux_land ng_ddg_analys s-adhoc",
    ma n = "com.tw ter.s mclusters_v2.scald ng.t et_s m lar y.evaluat on.RUXLand ngDdgAnalys sAdhocApp",
    platform = "java8",
    runt  _platform = "java8",
    tags = [
        "bazel-compat ble",
        "bazel-compat ble:m grated",
        "bazel-only",
    ],
    dependenc es = [
        ":evaluat on",
    ],
)
